<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ga_trackingId">UA-21337977-16</string>
    <string name="ga_sampleFrequency">5</string>
    <string name="fmradio_strings_app_name_txt">FM radio</string>
    <string name="fmradio_strings_menu_play_in_mono_txt">Force mono sound</string>
    <string name="fmradio_strings_menu_play_in_mono_ics_txt">Force mono sound</string>
    <string name="fmradio_strings_menu_play_in_stereo_txt">Enable stereo sound</string>
    <string name="fmradio_strings_menu_play_in_stereo_ics_txt">Enable stereo sound</string>
    <string name="fmradio_strings_menu_rescan_radio_stations_txt">Search for channels</string>
    <string name="fmradio_strings_menu_rescan_radio_stations_ics_txt">Search for channels</string>
    <string name="fmradio_strings_menu_play_in_speaker_txt">Play in speaker</string>
    <string name="fmradio_strings_menu_play_in_speaker_ics_txt">Play in speaker</string>
    <string name="fmradio_strings_menu_play_in_headphones_txt">Play in headphones</string>
    <string name="fmradio_strings_menu_play_in_headphones_ics_txt">Play in headphones</string>
    <string name="fmradio_strings_menu_track_id_txt">TrackID™</string>
    <string name="fmradio_strings_menu_set_radio_region_txt">Set radio region</string>
    <string name="fmradio_strings_menu_favorites_txt">Favorites</string>
    <string name="fmradio_strings_menu_visualizer_txt">Visualizer</string>
    <string name="fmradio_strings_visualizer_dialog_title_txt">Visualizer</string>
    <string name="fmradio_strings_visualizer_dialog_off_txt">Off</string>
    <string name="fmradio_strings_visualizer_dialog_gate_txt">Gate</string>
    <string name="fmradio_strings_visualizer_dialog_balloon_txt">Balloon</string>
    <string name="fmradio_strings_visualizer_dialog_glow_txt">Glow</string>
    <string name="fmradio_strings_visualizer_dialog_animal_txt">Animal</string>
    <string name="fmradio_strings_visualizer_dialog_albums_txt">Albums</string>
    <string name="fmradio_strings_visualizer_dialog_graffiti_txt">Graffiti</string>
    <string name="fmradio_strings_visualizer_dialog_sumi_txt">Ink</string>
    <string name="fmradio_strings_visualizer_dialog_random_txt">Random</string>
    <string name="fmradio_strings_dialog_title_set_radio_region_txt">Set radio region</string>
    <string name="fmradio_strings_region_default_txt">Default</string>
    <string name="fmradio_strings_region_japan_txt">Japan</string>
    <string name="fmradio_strings_region_italy_thailand_txt">Italy/Thailand</string>
    <string name="fmradio_strings_rescan_in_progress_txt">Searching</string>
    <string name="fmradio_strings_favorites_list_title_txt">Favorites</string>
    <string name="fmradio_strings_favorites_list_add_x_to_favorites_txt">Add %1$s to favorites</string>
    <string name="fmradio_strings_favorites_favorite_name_txt">%1$s %2$s</string>
    <string name="fmradio_strings_favorite_details_name">Name</string>
    <string name="gui_remove_txt">Delete</string>
    <string name="gui_save_txt">Save</string>
    <string name="gui_cancel_txt">Cancel</string>
    <string name="gui_done_txt">Done</string>
    <string name="fmradio_strings_nav_favorites_toast_txt">Create one more favorite to navigate between them</string>
    <string name="fmradio_strings_favorite_added_toast_txt">Added to favorites</string>
    <string name="fmradio_strings_connect_phf_txt">Please insert the headset. The cord works as the radio antenna.</string>
    <string name="fmradio_strings_connect_phf_title_txt">Insert headset</string>
    <string name="fmradio_strings_notification_txt">FM radio</string>
    <string name="fmradio_strings_notification_frequency_txt">%1$s MHz</string>
    <string name="fmradio_strings_notification_frequency_with_name_txt">%1$s MHz - %2$s</string>
    <string name="description_prev_station">Scan to previous station</string>
    <string name="description_next_station">Scan to next station</string>
    <string name="description_favourite">Manage favorites</string>
    <string name="description_favourite_ics">Manage favorite</string>
    <string name="description_next_favourite">Skip to next favorite</string>
    <string name="description_previous_favourite">Skip to previous favorite</string>
    <string name="description_power">Switch FM Radio on and off</string>
    <string name="description_facebook_like">Post to Facebook</string>
    <string name="description_edit_favourite">Edit</string>
    <string name="description_favorite_color_white_txt">White</string>
    <string name="description_favorite_color_yellow_txt">Yellow</string>
    <string name="description_favorite_color_green_txt">Green</string>
    <string name="description_favorite_color_blue_txt">Blue</string>
    <string name="description_favorite_color_purple_txt">Purple</string>
    <string name="description_favorite_color_pink_txt">Pink</string>
    <string name="talkback_frequency_changed">The frequency is now %s</string>
</resources>
