<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/favorite_name_label" />
    <EditText android:id="@id/favorite_details_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="textCapWords" />
    <RadioGroup android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/favorite_color_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/color_1" android:background="@null" android:layout_width="41.0dip" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:button="@drawable/favorite_color_1" android:contentDescription="@string/description_favorite_color_white_txt" />
        <RadioButton android:id="@id/color_2" android:background="@null" android:layout_width="41.0dip" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:button="@drawable/favorite_color_2" android:contentDescription="@string/description_favorite_color_yellow_txt" />
        <RadioButton android:id="@id/color_3" android:background="@null" android:layout_width="41.0dip" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:button="@drawable/favorite_color_3" android:contentDescription="@string/description_favorite_color_blue_txt" />
        <RadioButton android:id="@id/color_4" android:background="@null" android:layout_width="41.0dip" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:button="@drawable/favorite_color_4" android:contentDescription="@string/description_favorite_color_purple_txt" />
        <RadioButton android:id="@id/color_5" android:background="@null" android:layout_width="41.0dip" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:button="@drawable/favorite_color_5" android:contentDescription="@string/description_favorite_color_pink_txt" />
    </RadioGroup>
</LinearLayout>